# fiet-public

./: .gitignore  .gitmodules  .mirrorignore  AGENTS.md  INTERNAL-README.md  LICENSE  README.md  olympix-config.json
.cursor/: protocol-invariants.md
.cursor/plans/: 26:3-cursor_vulnerability_finding_assessment.md  balance-ledger_custody_75041f0b.plan.md  beneficiary_custodian_redesign_a2270032.plan.md  commitment_bypass_hardening_aed35910.plan.md  dormant_cise_banking_2f1f1775.plan.md  expand-mm-e2e-matrix_0ca4ce74.plan.md  fee_disablement_plan_4ed47903.plan.md  ingress_settlement_refactor_6e4b30d4.plan.md  market_action_sequencer_9985d7db.plan.md  mm_queue_custody_c6bc7e89.plan.md  mmqueuecustodian_action_plan_8d7b3681.plan.md  nested_settle_restore_87f64836.plan.md  phase1_boundary_quarantine_f371af68.plan.md  queue_settlement_hardening_dc6041ac.plan.md  relayed_vrl_signals_(eip-712)_6b331c4a.plan.md  reserve_liveness_supplement_93563aba.plan.md  reuse_residual_burn_c5a5079e.plan.md  secure-mm-settle-path_deb2b372.plan.md  secure_native_eth_flows_f016c34b.plan.md  submitter-locked_vrl_handlers_7052d81c.plan.md  vts_fee_carveout_51c24ff1.plan.md  vts_fee_hook_carveout_299f203f.plan.md
.cursor/rules/: rust-stylus-rules.mdc  solidity-rules.mdc
.githooks/: pre-commit
.github/: pull_request_template.md
.github/codex/: active-scope.json
.github/scripts/: cleanup-codex-scope.sh  install-foundry.sh
.github/workflows/: ci.yml  codex-pr-verify.yml  codex-scope-verify.yml  e2e.yml  fuzz-invariants.yml  olympix-security.yml  public-mirror.yml  publish.yaml  reactive-e2e.yml  sync-docs.yml  test.yml
.husky/: pre-commit
agents/: Fiet-BugPocer-run.md  UniswapLabs-MicroAudit-Context.md  codex-security-findings-2026-04-02T11-16-14.211Z.csv  hook-permissions-custom-accounting.md
agents/audit-findings/: 1-high-lane-timestamp-inheritance-in-rfscheckpointlibrary-mark-with-or-based-isseizable-causes-immediate-seizure-of-newly.md  1.txt  10.txt  10__medium-missing-proof-freshness-enforcement-in-vrl-verification-vtscommitlib-vrlsignalmanager-causes-stale-signal-backed-.md  10__medium-resetting-per-batch-msg-value-read-guard-in-positionmanagerentrypoint-under-delegatecall-multicall-causes-drainin.md  10__medium-unbounded-backfill-loop-in-hubrsc-backfillunderlyingqueueforlcc-before-dispatch-causes-lcc-wide-settlement-dispat.md  11.txt  11__medium-missing-canonical-poolkey-validation-in-mmpositionactionsimpl-mint-paths-causes-permanent-stranding-of-assets-and.md  11__medium-unbounded-backfill-loop-in-hubrsc-registration-causes-persistent-settlement-dispatch-dos-for-an-lcc.md  11__medium-unconditional-dice-index-checkpointing-with-per-event-floors-in-vtsfeelib-vtscommitlib-causes-reduced-coverage-bu.md  12.txt  12__low-missing-min-immediate-out-guard-for-exact-input-swaps-in-proxyhook-allows-deficit-queuing-and-reduced-immediate-payo.md  12__low-pre-claim-holder-balance-cap-in-liquidityhublib-processsettlementlogic-hub-path-causes-phantom-hub-queue-and-unneces.md  12__medium-unvalidated-signal-priceability-in-vtscommitlib-commit-renew-causes-seizure-dos-via-checkpoint-valuation-reverts.md  13.txt  13__informational-missing-zero-amount-guard-in-marketvault-cancellccwithdeficit-causes-revert-blocking-all-deficit-exact-inp.md  13__informational-unenforced-bound-exempt-assumption-in-proxyhook-lcc-transfer-handling-causes-orphaned-underlying-and-accou.md  13__low-delta-only-backing-check-in-vtspositionmmopslib-handleliquidityincrease-via-vtscommitlib-validateliquiditydelta-caus.md  14.txt  14__informational-emission-gating-hubqueuebeforesettlement-amount-in-liquidityhublib-confirmtakeprepare-causes-missed-liquid.md  14__informational-per-position-rounding-up-without-dust-handling-in-vtsfeelib-cise-bonus-allocation-causes-unfair-fee-distri.md  14__low-exempt-non-protocol-reclassification-in-lcc-and-wrapped-only-preparemarketliquidity-cause-core-to-receive-lcc-withou.md  15.txt  15__informational-floor-conversion-without-remainder-tracking-in-vtspositionlib-rebaseresidualfeegrowthonactiveincrease-duri.md  16.txt  17.txt  18.txt  19.txt  (+204 more)
contracts/stylus/fiet-maker-intent-validator/: Cargo.toml
contracts/stylus/fiet-maker-intent-validator/src/: decoder.rs  evaluator.rs  intent_policy.rs  intent_validator.rs  lib.rs  main.rs
contracts/stylus/fiet-maker-intent-validator/src/facts/: onchain.rs
contracts/stylus/fiet-maker-intent-validator/src/kernel/: constants.rs  interfaces.rs  mod.rs
contracts/stylus/fiet-maker-intent-validator/src/types/: envelope.rs  facts.rs  mod.rs  opcodes.rs
contracts/stylus/integration/: Cargo.toml  README.md
contracts/stylus/integration/src/: main.rs
contracts/stylus/liquidity_verifier/: Cargo.toml  README.md
contracts/stylus/liquidity_verifier/src/: main.rs
contracts/stylus/shared/fiet-maker-policy-types/: Cargo.toml
contracts/stylus/shared/fiet-maker-policy-types/src/: facts.rs  lib.rs  opcodes.rs
contracts/stylus/tools/: .taplo.toml  Cargo.toml
contracts/stylus/tools/arbos/: build-wasm.sh
contracts/stylus/tools/deployer/: Cargo.toml
contracts/stylus/tools/deployer/src/: main.rs
contracts/stylus/tools/fiet-maker-policy-encoder/: Cargo.toml
contracts/stylus/tools/fiet-maker-policy-encoder/src/: encoder.rs  facts.rs  lib.rs  tests.rs  types.rs
contracts/stylus/vrl_manager/: Cargo.toml  README.md  deployed_contract_address
contracts/stylus/vrl_manager/src/: main.rs
docs/: mint.json  overview.mdx
interfaces/: ISurety.sol
scripts/: 1_deploy.sh  2_initialize.sh  build-artifacts.sh
solidity/: .cursorrules  .env.example  .gitignore  .solhint.json  Makefile  README.md  foundry.toml  package.json  remappings.txt
src/: CSMM.sol  LimitedERC20.sol
static/: poolManager-getLiquidity.md  review_of_vts_model_and_gas_effi.md
strat/: Cargo.toml  README.md
strat/abi/: positionManager.json
strat/src/: constants.rs  errors.rs  liquidity.rs  main.rs  sol.rs  tick_math.rs
stylus/: README.md
stylus/fiet_stake/: Cargo.toml  README.md  abi.sol  deployed_contract_address
stylus/fiet_stake/src/: lib.rs
test/: CSMM.t.sol
(+1219 files in other folders)
