
[package]
name = "strat"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.23", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
eyre = "0.6.12"
hex = "0.4.3"
log = "0.4.27"
tokio = { version = "1.47.0", features = ["full"] }
