[package]
name = "fiet-stake"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/usherlabs/fiet-protocol"
repository = "https://github.com/usherlabs/fiet-protocol"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "SStake FIET on this contract"

[dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
    "tiny-keccak",
]}
alloy-sol-types = "=0.8.20"
mini-alloc = "0.8.3"
stylus-sdk = "0.8.3"
hex = "0.4.3"
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
stylus-sdk = { version = "0.8.3", features = ["stylus-test"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "fiet-stake"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3
