[package]
name    = "stylus-integration"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true, features = ["derive", "env"] }
ethers     = { workspace = true }
hex        = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["full"] }
