[workspace]
members = ["deployer", "fiet-maker-policy-encoder"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = "4.5.23"
dotenv = "0.15.0"
ethers = "2.0"
eyre = "0.6.8"
hex = { version = "0.4", default-features = false }
regex = "1.11.1"
serde = "1.0.197"
serde_json = "1.0"
time = "0.3.36"
tokio = "1.12.0"

# Stylus / Alloy (pinned for ABI compatibility)
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = "0.9.0"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3
